# delivery

./: Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  start.sql
api/: db.py  lifespan.py  main.py  settings.py
api/background_jobs/: assign_orders_job.py  move_couriers_job.py
api/http/: openapi.yaml  router.py  schemas.py
docker/postgres/: init.sql
src/delivery/adapters/incoming/kafka/basket/: consumer.py  shemas.py
src/delivery/core/application/use_cases/commands/: add_storage_place_command.py  assign_order.py  base.py  create_courier_command.py  create_order_command.py  move_couriers_command.py
src/delivery/core/application/use_cases/queries/: base.py  get_all_couriers_query.py  get_not_completed_orders_query.py
src/delivery/core/domain/model/: common.py
src/delivery/core/domain/model/courier/: courier.py  storage_place.py
src/delivery/core/domain/model/location/: location.py
src/delivery/core/domain/model/order/: order.py  order_status.py
src/delivery/core/domain/services/: order_dispatcher.py  order_dispatcher_interface.py
src/delivery/core/ports/: courier_repository.py  geo_service.py  order_repository.py
tests/: conftest.py
tests/delivery/core/application/use_cases/: test_create_courier_command.py  test_create_order_command.py  test_use_cases.py
tests/delivery/core/domain/model/: test_location_pydantic.py
tests/delivery/core/domain/model/courier/: test_courier.py  test_storage_place.py
tests/delivery/core/domain/model/location/: test_location.py  (+1 more)
tests/delivery/core/domain/services/: test_order_dispatcher.py
(+5 files in other folders)
