[project]
name = "delivery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"

dependencies = [
    "fastapi>=0.112.2,<0.113.0",
    "uvicorn[standard]>=0.27.1,<0.28.0",
    "pydantic>=2.6.1,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.27,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "asyncpg==0.29.0",
    "docker>=7.0.0,<8.0.0",
    "dependency-injector>=4.48.1,<5.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "grpclib[protobuf]>=0.4.8,<0.5.0",
    "faststream[kafka]>=0.5.44,<0.6.0",
    "python-json-logger>=3.3.0,<4.0.0",
    "pytest-asyncio>=0.23.8",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio==0.23.8",
    "testcontainers[postgres]>=3.7.1,<4.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.0.282,<0.1.0",
    "black>=23.7.0,<24.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "openapi-generator-cli>=7.14.0,<8.0.0",
    "grpcio-tools>=1.73.1,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
